--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
 	},
 	"dependencies": {
 		"@emotion/react": "^11.11.1",
+		"@radix-ui/react-alert-dialog": "^1.0.4",
+		"@radix-ui/react-slot": "^1.0.2",
 		"@t3-oss/env-nextjs": "^0.6.0",
 		"@tanstack/react-query": "^4.29.23",
 		"@types/node": "20.4.2",
@@ -19,6 +21,7 @@
 		"autoprefixer": "10.4.14",
 		"class-variance-authority": "^0.6.1",
 		"clsx": "^1.2.1",
+		"cookies-next": "^2.1.2",
 		"eslint": "8.45.0",
 		"eslint-config-next": "13.4.10",
 		"jotai": "^2.2.2",
@@ -30,6 +33,7 @@
 		"postcss": "8.4.26",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"react-geocode": "^0.2.3",
 		"sharp": "^0.32.3",
 		"tailwind-merge": "^1.13.2",
 		"tailwindcss": "3.3.3",
@@ -40,6 +44,7 @@
 	"devDependencies": {
 		"@ianvs/prettier-plugin-sort-imports": "^4.1.0",
 		"@next/bundle-analyzer": "^13.4.10",
+		"@types/react-geocode": "^0.2.1",
 		"cross-env": "^7.0.3"
 	}
 }
