--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
 	},
 	"dependencies": {
 		"@emotion/react": "^11.11.1",
+		"@hookform/resolvers": "^3.1.1",
 		"@radix-ui/react-alert-dialog": "^1.0.4",
+		"@radix-ui/react-label": "^2.0.2",
 		"@radix-ui/react-slot": "^1.0.2",
+		"@radix-ui/react-tabs": "^1.0.4",
 		"@t3-oss/env-nextjs": "^0.6.0",
 		"@tanstack/react-query": "^4.29.23",
 		"@types/node": "20.4.2",
@@ -34,6 +37,8 @@
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-geocode": "^0.2.3",
+		"react-hook-form": "^7.45.1",
+		"react-toastify": "^9.1.3",
 		"sharp": "^0.32.3",
 		"tailwind-merge": "^1.13.2",
 		"tailwindcss": "3.3.3",
