--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"react-hook-form": "^7.45.1",
 		"react-toastify": "^9.1.3",
 		"sharp": "^0.32.3",
+		"swiper": "^10.0.4",
 		"tailwind-merge": "^1.13.2",
 		"tailwindcss": "3.3.3",
 		"tailwindcss-animate": "^1.0.6",
